-------------
Version 0.6.2
-------------

TOOLKIT

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- The HttpConnectionManager and HttpClient objects used by the REST service can
  now be reinitialised on-demand using the #initHttpConnection method.
- The underlying HttpConnectionManager can be accessed to update its settings
  using the #getHttpConnectionManager method.

KUDOS TO:

David Kavanagh for sample code that helped improve HTTP proxy support and 
configurability.

-------------
Version 0.6.1
-------------

COCKPIT
- Added support for copying or moving objects within and between buckets.
- Added dialog to assist in moving/renaming multiple objects within a bucket.
- Added support for updating objects with new metadata values.
- Fixed issue where downloading items to a directory containing many files and 
  directories (eg 250K+) would cause Cockpit to fail with OutOfMemory errors.
- Added a Confirm Password field to the encryption settings, to help prevent 
  problems where a password is mistyped.
- Cockpit can now generate valid signed GET URLs for DevPay S3 accounts.
    

SYNCHRONIZE
- Synchonize now recognizes when you have specified a partial S3 path when 
  synchronizing DOWN. A partial path is one that does not exactly match a
  directory path. Partial paths can now act as a prefix test that identifies
  objects in an S3 path, where only the objects in S3 that match the prefix are
  downloaded. For example, in a bucket that has a Docs subdirectory containing
  objects named with a timestamp prefix, the S3 path "my-bucket/Docs/2008" will 
  identify the objects in the Docs subdirectory with names beginning with 2008.
- Added --batch option that causes Synchronize to compare and download/upload 